support Authoritative ERC-20 Token Holders
